fix: layout issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 /* homepage */
 .card-container {
   padding: 3em;
